--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,26 +1,6 @@
-@font-face {
-    font-family: 'Raleway';
-    src: url(../fontes/raleway/Raleway-ExtraBold.ttf);
-}
-@font-face {
-    font-family: 'Hamster';
-    src: url(../fontes/hamster/Hamster.otf);
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: 'Open-sans';
-    src: url(../fontes/open-sans/OpenSans-Regular.ttf);
-}
-
-@font-face {
-    font-family: 'Montserrat', sans-serif;
-    src: url(../fonts/Montserrat/Montserrat-Regular.ttf);
-}
-
 :root{
     --font-nav:'Raleway', cursive;
-    --font-subtTitle: 'Open-sans', cursive;
+    --font-subtTitle: 'Montserrat', sans-serif;
     --font-title: 'Hamster', cursive;
     --font-body: 'Montserrat', sans-serif;
 
@@ -31,544 +11,26 @@
     --cor5: #20384A;
 }
 
-body {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.1em;
-
-    animation-name: conteudo;
-	animation-duration: 2s;
+@font-face {
+    font-family: 'Montoserrat';
+    src: url(../font/Montserrat-Regular.ttf);
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url(../font/Roboto-Regular.ttf);
+    font-weight: normal;
 }
 
-/* CSS do Header */
-header {
-    background-color: var(--cor5);
-    padding: 40px 0;
-
-    animation-name: navegacao;
-	animation-duration: 2s;
+@font-face {
+    font-family: 'meu-nome';
+    src: url(../font/Tangerine-Regular.ttf);
+}
+:root {
+    --montserrat: 'Montserrat', sans-serif;
+    --roboto: 'Roboto';
+    --meu-nome: 'meu-nome';
 }
 
-.cabecalho {
-    position: relative;
-    width: 100%;
-    margin: 0 auto;
-}
-
-#ajuste {
-    margin-top: 30px;
-}
-.cabecalho h1 {
-    position: relative;
-    width: 200px;
-    left: 200px;
-    top: 0;
-    font-family: var(--font-title);
-    font-size: 2em;
-    color: var(--cor0);   
-}
-
-.cabecalho span{
-    color: var(--cor3);
-}
-
-nav {
-    position: absolute;
-    top: 0px;
-    right: 0;
-
-    
-}
-
-nav li {
-    display: inline;
-    margin-right: 20px;
-    padding: 10px;
-}
-
-nav a {
-    text-decoration: none;
-    color: var(--cor3);
-    font-size: 1.2em;
-    font-weight: lighter;
-    font-family: var(--font-nav);
-}
-
-nav a:hover {
-    color: var(--cor0);
-    font-size: 1.3em;
-    transition: 0.5s;
-}
-
-
-/* CSS DA PÁGINA HOME*/
 #home {
     background: var(--cor5);
-}
-
-#capa{
-    vertical-align: top;
-}
-
-#capa span{
-    color:var(--cor3);
-}
-
-#capa div{
-    display: inline-block;
-    height: 700px;
-}
-
-#profile-pic{
-    width: 40%;
-    text-align: center;
-
-    animation-name: profile-capa;
-	animation-duration: 2s;
-}
-
-#profile-pic img{
-    max-width: 350px;
-    border-radius: 80%;
-    margin-top: 190px;
-    margin-left: 200px;  
-
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.363);
-}
-
-#profile-title{
-    vertical-align: top;
-    width: 59.7%; 
-
-    animation-name: titulo-capa;
-	animation-duration: 2s;
-}
-
-#profile-title h1{
-    margin: 270px 0 0 0;
-    color: var(--cor0);
-    font-size: 8em;
-    font-weight: lighter;
-    font-family: var(--font-title); 
-}
-
-#profile-title h2{
-    margin-top: 0;
-    color: var(--cor0);
-    font-size: 1.8em;
-    font-family: var(--font-subtTitle);
-    font-weight: lighter;
-}
-
-/* CSS DA PÁGINA PORTIFOLIO */
-.principal {
-    width: 1000px;
-    margin: 0 auto;
-    padding: 20px 0;
-}
-
-.caminho {
-    padding: 20px 0;
-}
-
-.caminho li {
-    display: inline;
-}
-
-.principal h2 {
-    font-size: 1.7em;
-    font-weight: bold;
-    font-family: var(--font-subtTitle);
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.384);
-}
-
-
-.box {
-    width: 200px;
-    height: 200px;
-    background-color: var(--cor2);
-    overflow: hidden;
-    display: inline-block;
-    margin: 20px 20px 0 0;
-    transition: 1s;
-}
-
-.box a {
-    text-decoration: none;
-    
-}
-
-.box-conteudo {
-    width: 100%;
-    height: 100%;
-    padding-top: 70px;
-}
-
-.box-texto {
-    text-align: center;
-}
-
-.box-texto h3 {
-    font-size: 1.3em;
-    color: var(--cor0);
-}
-
-.box-texto p{
-    font-size: 1.1em;
-    color: var(--cor3);
-    margin-top: 20px;
-}
-
-.box:hover{
-    background-color: var(--cor5);
-    transition: 1s;
-    width: 204px;
-    height: 204px;
-}
-
-
-/* CSS DA PÁGINA CURRICULO*/
-main#curriculo{
-    padding: 10px;
-    margin: 0 auto;
-    
-    max-width: 1000px;
-
-}
-
-#documento {
-    width: 450px;
-    margin: 0 auto;
-    padding: 10px;
-
-}
-.dados {
-    width: 450px;
-    margin-top: 30px;
-    background-color: var(--cor0);
-    padding: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.418);
-    border-radius: 10px;
-}
-
-.foto-documento {
-    width: 150px;
-    float: left;
-    margin: 10px 40px 0 10px;
-}
-
-.dados h1 {
-    font-size: 2em;
-    padding: 5px;
-    margin-bottom: 10px ;
-    font-family: var(--font-subtTitle);
-    font-weight: bold;
-    color: var(--cor5);
-
-}
-
-.dados h2 {
-    padding-top: 0px;
-    font-weight: bold;
-    font-style: italic; 
-    font-size: 1.2em;
-}
-
-.dados p {
-    font-size: 1.1em;
-    padding: 10px 0;
-}
-
-.informacoes {
-    background-color: var(--cor5);
-    width: auto;
-    padding: 30px;
-    margin: 0 auto;
-    margin-top: 30px;
-
-
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.418);
-    border-radius: 10px;
-}
-.secao{
-    background-color: var(--cor0);
-    padding: 10px;
-    margin: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.418);
-    border-radius: 10px;
-}
-
-.secao h2{
-    background-image: linear-gradient(to right, var(--cor5), var(--cor0));
-    color: var(--cor0);
-    padding:5px;
-    margin-bottom: 10px;
-
-    font-size: 1.4em;
-    font-weight: bold;
-
-}
-.secao h3{
-   padding-top:20px;
-   margin-left: 5px;
-   color: var(--cor1);
-
-   font-family: var(--fonte-padrao);
-   font-size: 1.2em;
-   font-weight: bold;
-}
-
-.secao h4{
-    margin-left: 5px;
-    padding-top:10px;
-    color:var(--cor2);
-
-    font-family: var(--fonte-padrao);
-    font-size: 1em;
-    font-weight: bold;
-    font-style: italic;
-
-}
-.secao p{
-    margin: 10px;
-    
-    text-indent: 30px;
-    line-height: 1.3em;
-
-    font-family: var(--fonte-padrao);
-    font-size: 1.02em;
-}
-
-.secao ul{
-    padding-top:10px;
-    list-style-type: '\2714\00A0\00A0';
-    list-style-position: inside;
-    line-height: 1.4em;
-}
-
-/* CSS DA PÁGINA CONTATOS */
-
-.contato {
-    width: 1000px;
-    margin: 20px auto 0 auto;
-}
-
-.contato-informacoes h3 {
-    padding: 10px 0 5px 0;
-    font-size: 1.2em;
-    color: var(--cor5);
-    font-weight: bold;
-}
-
-.contato-informacoes p {
-    font-size: 1.1em;
-}
-
-@keyframes profile-capa {
-	0% {opacity: 0; transform: translate(0px,20px)}
-	100% {opacity: 1; transform: translate(0px,0px)}
-}
-
-@keyframes titulo-capa {
-	0% {opacity: 0; transform: translate(0px,-20px)}
-	100% {opacity: 1; transform: translate(0px,0px)}
-} 
-
-@keyframes conteudo {
-	0% {opacity: 0; transform: translate(-20px,0px)}
-	100% {opacity: 1; transform: translate(0px,0px)}
-} 
-
-@keyframes navegacao {
-	0% {opacity: 0;}
-	50% {opacity: 0;}
-	100% {opacity: 1}
-}
-
-/* Responsividade em Media Query para tela de até 1440px*/
-@media (max-width: 1440px){
-
-    #capa div{
-        display: inline-block;
-        height: 700px;
-    }
-    
-    #profile-pic{
-        width: 40%;
-        text-align: center;
-    } 
-    
-    #profile-title{
-        width: 59%; 
-    }
-    
-    #profile-title h1{
-        font-size: 7em;
-        margin-left: 20px; 
-    }
-    
-    #profile-title h2{
-        font-size: 1.5em;
-        margin-left: 20px;
-    }
-
-}
-
-/* Responsividade em Media Query para tela de até 1200px*/
-@media (max-width: 1200px){
-
-    #capa div{
-        display: inline-block;
-        height: 700px;
-    }
-    
-    #profile-pic{
-        width: 40%;
-        text-align: center;
-    }    
-
-    #profile-pic img{
-        max-width: 300px;
-        border-radius: 80%;
-        margin-top: 190px;
-        margin-left: 100px;  
-    }
-
-    #profile-title{
-        width: 59%; 
-    }
-    
-    #profile-title h1{
-        font-size: 6em;
-        margin-left: 20px; 
-    }
-    
-    #profile-title h2{
-        font-size: 1.2em;
-        margin-left: 20px;
-    }
-
-}
-
-
-/* Responsividade em Media Query para tela de até 900px*/
-@media (max-width: 900px){
-    header {
-        margin-bottom: 100px; 
-    }
-    nav{
-        font-size: 0.8em;
-        margin-top: 10px;
-        width: 100%;
-    }
-    nav li{
-        text-align: center;
-        width: 100%;
-        display: block;
-        padding: 7px;
-    }
-
-    .alterar-fundo {
-        padding: 10px 0 150px 0; 
-    }
-
-    .cabecalho h1 {
-        display: none;
-    } 
-
-    #capa div{
-        display: block;
-        height: auto;
-    }
-
-    #profile-pic{
-        width: 100%;
-    }
-
-    #profile-pic img{
-        max-width: 60%;
-        border-radius: 80%;
-        margin-top: 100px;
-        margin-left: 0px;  
-    }
-
-    #profile-title{
-        vertical-align: top;
-        width: 100%;
-    }
-    
-    #profile-title h1{
-        margin: 30px 15px 0 15px;
-        font-size: 4em;
-        text-align: center;
-    }
-    
-    #profile-title h2{
-        margin-top: 5px;
-        margin-left: auto;
-        font-size: 16px;
-        text-align: center;
-    }
-
-    .caminho {
-        margin-top: -80px;
-    }
-
-    .principal {
-        width: auto;
-    }
-    .box {
-        display: block;
-        margin: 20px auto;
-
-    }
-
-    .contato {
-        width: auto;
-    }
-
-    .contato-informacoes {
-        margin-left: 30px;
-        padding: 10px;
-    }
-
-    /*
-    */
-
-    main#curriculo{
-        margin: 0 auto;
-        
-    }
-
-    #documento {
-        width: auto;
-        padding: 0;
-        margin: 0;
-        text-align: center;
-    }
-    .informacoes {
-        padding: 5px;
-        margin-top: 30px;
-        width: 100%;
-        
-    }
-
-    .dados {
-        width: auto;
-    }
-
-    .dados h1 {
-        text-align: center;
-        margin-bottom: 10px;
-    }
-
-    .dados h2, p {
-        text-align: left;
-        margin: 0 0 0 20px;
-
-    }
-
-    .foto-documento {
-        float: none;
-        margin: 0 auto;
-    }
 }
