menu em javascript

--- a/assets/style/logo.css
+++ b/assets/style/logo.css
@@ -1,10 +1,11 @@
 .logo {
     color: var(--cor0);
     font-family: var(--meu-nome);
-    font-size: 2rem;
+    font-size: 2.2rem;
     font-weight: bold;
-    padding-left: 1rem;
     text-shadow: 3px 5px 5px rgba(0, 0, 0, 0.568);
+    padding-left: 1rem;
+    width: calc(100% - 80px);
 }
 
 .logo--off {
