--- a/assets/style/apresentacao/apresentacao.css
+++ b/assets/style/apresentacao/apresentacao.css
@@ -1,9 +1,21 @@
 .apresentacao {
-    align-items: center;
     color: var(--cor0);
-    display: flex;
-    flex-direction: column;
     font-family: var(--montserrat);
     line-height: 1.5rem;
     width: 100%;
+}
+
+@media screen and (min-width: 0) {
+    .apresentacao {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    .apresentacao {
+        display: block;
+        padding: 1rem 0 0 1rem;  
+    }
 }
