--- a/assets/style/caixas/caixa.css
+++ b/assets/style/caixas/caixa.css
@@ -1,6 +1,4 @@
 .caixa {
-    display: flex;
-    justify-content: center;
     background-color:var(--cor2);
     margin-bottom: 2rem;
     width: 70%;
@@ -9,4 +7,13 @@
 
 .caixa:first-child {
     margin-top: 2rem;
+}
+
+@media screen and (min-width: 900px) {
+    .caixa {
+        width: 200px;
+        margin-right: 2rem;
+        margin-top: 2rem;
+    }
+
 }
