--- a/assets/style/menu/menu-icone.css
+++ b/assets/style/menu/menu-icone.css
@@ -1,6 +1,17 @@
 .menu__icone {
     color: var(--cor3);
-    cursor: pointer;
     font-size: 2rem;
     padding: 1rem;
+}
+
+@media screen and (min-width: 0) {
+    .menu__icone {
+        cursor: pointer;
+    }  
+}
+
+@media screen and (min-width: 900px) {
+    .menu__icone {
+        display: none;
+    }  
 }
