--- a/assets/style/menu/menu-item.css
+++ b/assets/style/menu/menu-item.css
@@ -1,6 +1,16 @@
-.menu__item {
-    display: none;
+@media screen and (min-width: 0) {
+    .menu__item {
+        display: none;
+    }  
 }
+
+@media screen and (min-width: 900px) {
+    .menu__item {
+        display: flex;
+    }  
+}
+
+
 
 
     
