--- a/assets/style/menu/menu-link.css
+++ b/assets/style/menu/menu-link.css
@@ -8,3 +8,9 @@
 .menu__link:hover {
     color: var(--cor0);
 }
+
+@media screen and (min-width: 900px) {
+    .menu__link {
+        font-size: 1.4rem;
+    }  
+}
